kustomize/tapo/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapo-web
  namespace: tapo
  labels:
    app: tapo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tapo-web
  template:
    metadata:
      labels:
        app: tapo-web
    spec:
      containers:
      - name: tapo-web
        image: ghcr.io/hernan82arg/homeweb:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi" 
            cpu: "100m"
