kustomize/tapo/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tapo-web
  namespace: tapo
spec:
  selector:
    app: tapo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
