kustomize/tapo/web/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tapo-web
  namespace: tapo
spec:
  parentRefs:
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - tapo-web.${DOMAIN}
  rules:
    - backendRefs:
        - kind: Service
          name: tapo-web
          port: 80
