kustomize/tapo/web/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapo-web
  namespace: tapo
spec:
  ingressClassName: nginx
  rules:
    - host: tapo-web.homelab.local
      http:
        paths:
          - backend:
              service:
                name: tapo-web
                port:
                  number: 80
            path: /
            pathType: Prefix
